--- a/src/lib/components/Buttons/Button/index.scss
+++ b/src/lib/components/Buttons/Button/index.scss
@@ -12,21 +12,12 @@ $widths: (block, full);
 
 $hover: #fff !default;
 
-@function button-type($key, $value) {
-}
-@function str-to-num($string: "", $at) {
-	@if type-of($at) == number {
-		@return #{unquote(str-slice(unquote($string), $at + 1))};
-	} @else {
-		@return calc(unquote($string) + 0);
-	}
-}
 @each $color in $color-names {
 	.fill-solid[color="#{$color}"] {
 		color: map-get($color-map, $color, "contrast");
 	}
 
-	button[color="#{$color}"] {
+	:where(a, button)[color="#{$color}"] {
 		@include pseudo {
 			--c-primary-tint: #{map-get($color-map, $color, "tint")};
 
@@ -34,7 +25,7 @@ $hover: #fff !default;
 
 			--c-primary-contrast: #{map-get($color-map, $color, "contrast")};
 
-			--c-primary-shade: #{map-get($color-map, $color, "shade")};
+			--c-primary-shade: #{map-get($color-map, $color, "shade")}
 		}
 	}
 }
@@ -52,17 +43,19 @@ $hover: #fff !default;
 		--text-hover-color: var(--c-primary-base);
 	}
 }
+
 :where(.fill-outline) {
 	@include pseudo {
 		--border-style: solid;
 		--border-width: 0.0625rem;
 		--border-radius: 0.5rem;
 		--border-color: var(--c-primary-shade);
-		--bg-active: var(--c-primary-base);
+		--bg-active: var(--c-primary-tint);
 		--bg-focused: var(--c-primary-base);
 		--bg-color: transparent;
-		--bg-hover: transparent;
+		--bg-hover: var(--c-primary-shade);
 		--bg-focus-opacity: 0.1;
+		--bg-hover-opacity: 0.05;
 		--text-color: var(--c-primary-shade);
 		--text-hover-color: var(--c-primary-base);
 		--text-active-color: var(--c-primary-tint);
@@ -75,9 +68,11 @@ $hover: #fff !default;
 		--bg-focused: var(--c-primary-shade);
 		--bg-hover: var(--c-primary-tint);
 		--bg-color: var(--c-primary-base);
+		--text-color: var(--c-primary-tint);
+
 		--bg-focus-opacity: 1;
 		--bg-active-opacity: 1;
-		--bg-hover-opacity: 0.7;
+		--bg-hover-opacity: 0.5;
 	}
 }
 
@@ -89,7 +84,12 @@ $hover: #fff !default;
 	width: 100%;
 }
 
-button {
+
+
+:where([color="light"]) {
+	--text-color: var(--c-primary-contrast);
+}
+:where(a, button) {
 	position: relative;
 	border-radius: var(--border-radius, 8px);
 	border-width: var(--border-width, 1px);
@@ -97,15 +97,14 @@ button {
 	border-style: var(--border-style, solid);
 	background-color: var(--bg-color, transparent);
 	user-select: none;
-	appearance: none;
 
 	color: var(--text-color, initial);
 	touch-action: manipulation;
-	transition: 240ms 120ms cubic-bezier(0.165, 0.84, 0.44, 1);
-	text-shadow: 0px 0.2px 1px hsla(0, 0%, 0%, 0.2%);
+	transition: 120ms 32ms cubic-bezier(.6, .0, 1, 1);
+	text-shadow: 0px -0.2px 1px hsl(0deg 0% 0% / 20%);
 	transition-property: color, background-color, opacity;
 	font-family: "InterVariable";
-	height: 2.8em;
+	min-height: 2.75em;
 	margin-top: 4px;
 	margin-bottom: 4px;
 	margin-left: 2px;
@@ -120,39 +119,58 @@ button {
 	letter-spacing: -0.03em;
 	font-weight: 400;
 	cursor: pointer;
+	-webkit-user-select: none;
 
 	&::after {
+
 		content: "";
 		position: absolute;
 		user-select: none;
 		inset: 0;
 		transition: inherit;
 		border-radius: inherit;
-		background-clip: text;
+		pointer-events: none;
+		user-select: none;
 		z-index: -1;
 		background-color: var(--bg-hover, transparent);
 		opacity: 0;
 	}
 	@media (hover: hover) {
 		&:hover:not(:active) {
-			transition-delay: 0ms;
-			color: var(--text-hover-color, initial);
+			// color: #{mix(map-get($color-map, "primary", "contrast"), rgba(0, 0, 0, 0.759), 5%)};
 			&::after {
+				transition-delay: 0ms !important;
+
 				opacity: var(--bg-hover-opacity, 0.1);
+				background-color: var(--bg-hover, transparent);
 			}
 		}
 	}
+
 	&:active {
+		transition-duration: 0ms !important;
+		transition-delay: 0ms !important;
 		color: var(--text-active-color, initial);
+		text-shadow: 0px -0.2px 5px hsl(0deg 0% 0% / 20%);
+
 	}
+
 	&:hover:active::after,
 	&:active::after {
 		transition-duration: 0ms !important;
-		transition-delay: 0ms !important;
 
 		background-color: var(--bg-active, transparent);
-		color: invert(map-get($color-map, "primary", "contrast"));
+		color: #{invert(
+				adjust-color(
+					map-get($color-map, "primary", "contrast"),
+					$lightness: 50%
+				)
+			)};
 		opacity: var(--bg-active-opacity, 0.1);
 		// 	--f-clr-active,
 	}
+}
+
+:where(.pill) {
+	border-radius: 6rem;
 }
