--- a/src/lib/stylesheet/theme.scss
+++ b/src/lib/stylesheet/theme.scss
@@ -1,9 +1,8 @@
 @use "sass:color";
 @use "./base/colors";
+@use "./base/functions" as *;
 
-@function get-color($color, $variation) {
-	@return map-get(colors.$color-map, $color, $variation);
-}
+
 
 $app-dark: hsl(240, 14%, 4.5%);
 $app-light: hsl(0, 0%, 95%);
